--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,52 @@
-instagram_private_api==1.6.0.0
+APScheduler==3.6.3
+arabic-reshaper==2.1.3
+async-generator==1.10
+attrs==21.4.0
+autopep8==1.6.0
+beautifulsoup4==4.10.0
+cachetools==4.2.2
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+colorama==0.4.4
+cryptography==36.0.1
+decorator==4.4.2
+docopt==0.6.2
+future==0.18.2
+h11==0.13.0
+idna==3.3
+imageio==2.16.1
+imageio-ffmpeg==0.4.5
+instagram-private-api==1.6.0.0
+moviepy==1.0.3
+numpy==1.22.3
+outcome==1.1.0
+Pillow==9.0.1
+pipreqs==0.4.11
+proglog==0.1.9
+psycopg2==2.9.3
+pycodestyle==2.8.0
+pycparser==2.21
+pymongo==4.0.1
+pyOpenSSL==22.0.0
+PySocks==1.7.1
 pyTelegramBotAPI==4.4.0
+python-telegram-bot==13.11
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
+selenium==4.1.2
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+toml==0.10.2
+tornado==6.1
+tqdm==4.63.0
+trio==0.20.0
+trio-websocket==0.9.2
+tzdata==2022.1
+tzlocal==4.1
+urllib3==1.26.8
+wsproto==1.1.0
+yarg==0.1.9
